Modificações locais dos ultimos dias.

--- a/denuncie.html
+++ b/denuncie.html
@@ -6,6 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Denuncie</title>
 </head>
 <body>
@@ -32,5 +34,23 @@
         </ul>
     </div>
 </nav>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Denuncie Aqui</h1>
+</div>
+<div class="container marketing">
+    <p class="container marketing">
+    <p class="lead">Na ADEH também acontece o&nbsp;<strong><strong>Centro de Referência em Direitos Humanos de Florianópolis-SC</strong>, </strong>voltado ao acolhimento e acompanhamento de pessoas em situação de discriminaçao e violência de gênero.</p>
+    <p class="lead">Você pode nos enviar um recado com seus dados e informações para que entremos em contato com você.</p>
+    <p class="lead" style="text-align:center; font-weight: bold">As denúncias são anônimas.</p>
+    <p class="lead" style="text-align:center; font-weight: bold">
+        <a href="mailto:bb.bruno.bernardo@gmail.com?subject=Ol%C3%A1%2C%20vi%20seu%20curriculo%20online." target="_blank">
+            <i class="fa fa-envelope-o" style="font-size:74px"></i>
+        </a>
+        <a href="mailto:bb.bruno.bernardo@gmail.com?subject=Ol%C3%A1%2C%20vi%20seu%20curriculo%20online." target="_blank">
+            <i class="fa fa-whatsapp" style="font-size:74px"></i>
+        </a>
+    </p>
+</div>
+</div>
 </body>
 </html>
