--- a/sobre.html
+++ b/sobre.html
@@ -32,8 +32,18 @@
         </ul>
     </div>
 </nav>
-<svg style="filter: brightness(50%);" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-    <image align="bottom" xlink:href="https://images.unsplash.com/photo-1557180770-2862eb477a33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="100%"/>
-</svg>
+<!--<div style="height: 400px;">-->
+<!--    <svg style="filter: brightness(50%);" class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img">-->
+<!--        <image align="bottom" xlink:href="https://images.unsplash.com/photo-1557180770-2862eb477a33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="100%"/>-->
+<!--    </svg>-->
+<!--    <h1 class="display-4" style="position: absolute;">Como Trabalhamos</h1>-->
+<!--</div>-->
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Sobre a ADEH</h1>
+</div>
+<div class="container marketing">
+    <p class="lead">A ADEH – Associação em Defesa dos Direitos Humanos com Enfoque na Sexualidade é uma Organização Não-Governamental que atua no sentido da garantia de direitos, da promoçao de saúde e da discussão no campo dos Direitos Humanos e das políticas TLGB (Travestis, Transexuais, Lésbicas, Gays e Bissexuais).</p>
+    <p class="lead">A ADEH está aberta para o atendimento ao público de segunda a sexta, das 14h às 18h.</p>
+</div>
 </body>
 </html>
